simplify invoice id generation